# rust-axum-template

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
src/controllers/: mod.rs  service_controller.rs
